--- a/kernel-config/release/rk35xx/config-6.1
+++ b/kernel-config/release/rk35xx/config-6.1
@@ -8637,6 +8637,12 @@ CONFIG_LKDTM=y
 # CONFIG_TEST_MEMINIT is not set
 # CONFIG_TEST_FREE_PAGES is not set
 CONFIG_ARCH_USE_MEMTEST=y
+CONFIG_IP_ROUTE_FWMARK=y
+CONFIG_NETFILTER_TPROXY=y
+CONFIG_NETFILTER_XT_MATCH_SOCKET=y
+CONFIG_NETFILTER_XT_TARGET_TPROXY=y
+CONFIG_NFSD=m
+CONFIG_NFSD_V4=y
 # CONFIG_MEMTEST is not set
 # end of Kernel Testing and Coverage
 
